crates/kernel/tests/table/snapshots/main__table__router__confirm_delete_cancelled_trashes_nothing.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 372
expression: "walked(model, messages)"
---
[
    (
        Overlay(
            Open(
                ConfirmDelete,
            ),
        ),
        [
            Animate(
                OverlayOpened,
            ),
        ],
        Stopped,
        Some(
            ConfirmDelete(
                DeleteCandidate {
                    source: Local(
                        "/m/0.flac",
                    ),
                    title: "Moon River",
                    artist: "Audrey Hepburn",
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Overlay(
            Close,
        ),
        [
            Animate(
                OverlayClosed,
            ),
        ],
        Stopped,
        None,
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
]
