crates/kernel/tests/table/snapshots/main__table__router__confirm_delete_captures_the_selected_track_and_trashes_it.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 368
expression: "walked(model, messages)"
---
[
    (
        Overlay(
            Open(
                ConfirmDelete,
            ),
        ),
        One(
            Animate(
                OverlayOpened,
            ),
        ),
        Stopped,
        Some(
            ConfirmDelete(
                DeleteCandidate {
                    index: Index(0),
                    title: "Moon River",
                    artist: "Audrey Hepburn",
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Overlay(
            Confirm,
        ),
        Batch(
            [
                Animate(
                    OverlayClosed,
                ),
                Library(
                    Trash(
                        "/m/0.flac",
                    ),
                ),
                Animate(
                    TrackDeleted,
                ),
            ],
        ),
        Stopped,
        None,
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 2,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
]
