crates/kernel/tests/table/snapshots/main__table__router__confirm_trash_cancelled_trashes_nothing.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 372
expression: "walked(model, messages)"
---
[
    (
        Overlay(
            Open(
                ConfirmTrash,
            ),
        ),
        [
            Animate(
                OverlayOpened,
            ),
        ],
        Stopped,
        Some(
            ConfirmTrash(
                Track {
                    source: Local(
                        "/m/0.flac",
                    ),
                    tags: Tags {
                        title: Some(
                            "Moon River",
                        ),
                        artist: Some(
                            "Audrey Hepburn",
                        ),
                        album: None,
                        album_artist: None,
                        date: None,
                        genre: None,
                        track_number: None,
                        track_total: None,
                        disc: None,
                        composer: None,
                        comment: None,
                        lyrics: None,
                    },
                    audio_format: AudioFormat {
                        format: None,
                        bitrate: None,
                        sample_rate: None,
                        bits_per_sample: None,
                        channels: None,
                        decibels: None,
                    },
                    display: "Audrey Hepburn — Moon River",
                    tagging: Tagged(
                        100s,
                    ),
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: None,
            output_status: Ready,
        },
        [],
    ),
    (
        Overlay(
            Close,
        ),
        [
            Animate(
                OverlayClosed,
            ),
        ],
        Stopped,
        None,
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: None,
            output_status: Ready,
        },
        [],
    ),
]
