crates/kernel/tests/table/snapshots/main__table__router__confirm_trash_captures_the_selected_track_and_trashes_it.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 382
expression: "walked(model, messages)"
---
[
    (
        Overlay(
            Open(
                ConfirmTrash,
            ),
        ),
        [
            Animate(
                OverlayOpened,
            ),
        ],
        Stopped,
        Some(
            ConfirmTrash(
                TrashCandidate {
                    source: Local(
                        "/m/0.flac",
                    ),
                    title: "Moon River",
                    artist: "Audrey Hepburn",
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: None,
            output_status: Ready,
        },
        [],
    ),
    (
        Overlay(
            Confirm,
        ),
        [
            Animate(
                OverlayClosed,
            ),
            Library(
                Disk(
                    Trash(
                        "/m/0.flac",
                    ),
                ),
            ),
        ],
        Stopped,
        None,
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: None,
            output_status: Ready,
        },
        [],
    ),
    (
        Library(
            Trashed(
                "/m/0.flac",
            ),
        ),
        [
            Animate(
                TrackTrashed,
            ),
        ],
        Stopped,
        None,
        Cursor {
            index: 0,
            len: 2,
        },
        Cursor {
            index: 0,
            len: 2,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: None,
            output_status: Ready,
        },
        [],
    ),
]
