crates/kernel/tests/table/snapshots/main__table__router__cycling_repeat_wraps_back_to_off.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 414
expression: "walked(model, messages)"
---
[
    (
        Playback(
            CycleRepeat,
        ),
        One(
            Animate(
                PlayOrderChanged,
            ),
        ),
        Stopped,
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 0,
        },
        [],
        All,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            output: Ready,
        },
        None,
    ),
    (
        Playback(
            CycleRepeat,
        ),
        One(
            Animate(
                PlayOrderChanged,
            ),
        ),
        Stopped,
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 0,
        },
        [],
        One,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            output: Ready,
        },
        None,
    ),
    (
        Playback(
            CycleRepeat,
        ),
        One(
            Animate(
                PlayOrderChanged,
            ),
        ),
        Stopped,
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 0,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            output: Ready,
        },
        None,
    ),
]
