crates/kernel/tests/table/snapshots/main__table__router__history_enqueue_of_a_path_no_longer_in_the_library_says_so.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 368
expression: "walked(model, messages)"
---
[
    (
        Overlay(
            History(
                Enqueue,
            ),
        ),
        [
            Animate(
                ToastRaised,
            ),
            After {
                delay: 5s,
                timer: Toast(
                    Revision(
                        1,
                    ),
                ),
            },
        ],
        Stopped,
        Some(
            History(
                CursorOver {
                    cursor: Cursor {
                        index: 0,
                        len: 1,
                    },
                    content: (),
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 0,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: None,
            output_status: Ready,
        },
        [
            Toast {
                level: Info,
                title: "Not in library",
                text: None,
                raised_at: Moment(
                    0ns,
                ),
            },
        ],
    ),
]
