crates/kernel/tests/table/snapshots/main__table__router__history_enqueue_queues_the_library_track_at_the_selected_path.snap
---
source: crates/kernel/tests/table/router.rs
expression: "walked(model, messages)"
---
[
    (
        Overlay(
            History(
                Enqueue,
            ),
        ),
        One(
            Animate(
                QueueChanged,
            ),
        ),
        Stopped,
        Some(
            History(
                CursorOver {
                    cursor: Cursor {
                        index: 1,
                        len: 2,
                    },
                    rows: (),
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 2,
        },
        Cursor {
            index: 0,
            len: 0,
        },
        [
            Index(1),
        ],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            preload_lead: 10s,
            output: Ready,
        },
        None,
    ),
]
