crates/kernel/tests/table/snapshots/main__table__router__nudging_speed_down_steps.snap
---
source: crates/kernel/tests/table/router.rs
expression: "walked(model, messages)"
---
[
    (
        Playback(
            NudgeSpeed(
                SpeedStep(
                    -1,
                ),
            ),
        ),
        One(
            Audio(
                SetSpeed(
                    Speed(
                        0.75,
                    ),
                ),
            ),
        ),
        Stopped,
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 0,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                0.75,
            ),
            sleep: None,
            ab: None,
            preload_lead: 10s,
            output: Ready,
        },
        None,
    ),
]
